@@ -1,3 +1,5 @@
+- bootloader-config:
+  o do not create "linux" entries for xen kernels, but "xen" entries instead
 - localedrake:
   o fix handling variant together with charset (eg: uz.UTF-8@Latn) (#35090)
 - drakbug:
